@@ -148,8 +148,8 @@ as 'border' [[!CSS3BG]].
 <h2 id="values">Values</h2>
 
 <p>This specification follows the <a href="http://www.w3.org/TR/CSS21/about.html#property-defs">CSS property definition
-conventions</a> from [[!CSS21]]. Basic shapes are defined in CSS Exclusions and
-Shapes Module Level 3 [[!CSS3-EXCLUSIONS]]. Value types not defined in these
+conventions</a> from [[!CSS21]]. Basic shapes are defined in CSS Shapes Module
+Level 1 [[!CSS-SHAPES]]. Value types not defined in these
 specifications are defined in CSS Values and Units Module Level 3 [[!CSS3VAL]].
 
 <p>In addition to the property-specific values listed in their definitions, all
@@ -1495,7 +1495,7 @@ environment.
   </tr>
   <tr>
     <th>Animatable:</th>
-    <td>See <a href="http://dev.w3.org/csswg/css-shapes/#shape-outside-property">'shape-outside'</a> [[!CSS3-EXCLUSIONS]]</td>
+    <td>See <a href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">'shape-outside'</a> [[!CSS-SHAPES]]</td>
   </tr>
 </table>
 
@@ -1510,9 +1510,9 @@ create a <var>clipping path</var>.
     <dfn>&lt;basic-shape&gt;</dfn>
   </dt>
   <dd>
-    A <a href="http://www.w3.org/TR/2012/WD-css3-exclusions-20120503/#supported-svg-shapes">basic shape function</a> as defined in CSS3 Exclusions. The origin of clipping shapes is on the top left of the <span
+    A <a href="http://www.w3.org/TR/css-shapes-1/#basic-shapes-from-svg-syntax">basic shape function</a> as defined in the CSS Shapes module. The origin of clipping shapes is on the top left of the <span
     class=index>bounding client rect</span>. Percentage values are resolved against the
-    <span class=index>bounding client rect</span> width and height. (See [[!CSS3-EXCLUSIONS]].)
+    <span class=index>bounding client rect</span> width and height. (See [[!CSS-SHAPES]].)
   </dd>
   <dt>''child''</dt>
   <dd>
