@@ -11,7 +11,7 @@
    rel=dcterms.rights>
   <meta content="CSS Masking Level 1" name=dcterms.title>
   <meta content=text name=dcterms.type>
-  <meta content=2013-05-30 name=dcterms.date>
+  <meta content=2013-06-20 name=dcterms.date>
   <meta content="Dirk Schulze" name=dcterms.creator>
   <meta content="Brian Birtles" name=dcterms.creator>
   <meta
@@ -36,14 +36,14 @@
 
    <h1>CSS Masking Level 1</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 30 May 2013</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 20 June 2013</h2>
 
    <dl>
     <dt>This version:
 
     <dd><a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/default/masking/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/default/masking/index.html</a>
-     <!--http://www.w3.org/TR/2013/WD-css-masking-20130530/-->
+     <!--http://www.w3.org/TR/2013/WD-css-masking-20130620/-->
 
     <dt>Latest version:
 
@@ -386,10 +386,10 @@
    href="http://www.w3.org/TR/CSS21/about.html#property-defs">CSS property
    definition conventions</a> from <a href="#CSS21"
    rel=biblioentry>[CSS21]<!--{{!CSS21}}--></a>. Basic shapes are defined in
-   CSS Exclusions and Shapes Module Level 3 <a href="#CSS3-EXCLUSIONS"
-   rel=biblioentry>[CSS3-EXCLUSIONS]<!--{{!CSS3-EXCLUSIONS}}--></a>. Value
-   types not defined in these specifications are defined in CSS Values and
-   Units Module Level 3 <a href="#CSS3VAL"
+   CSS Shapes Module Level 1 <a href="#CSS-SHAPES"
+   rel=biblioentry>[CSS-SHAPES]<!--{{!CSS-SHAPES}}--></a>. Value types not
+   defined in these specifications are defined in CSS Values and Units Module
+   Level 3 <a href="#CSS3VAL"
    rel=biblioentry>[CSS3VAL]<!--{{!CSS3VAL}}--></a>.
 
   <p>In addition to the property-specific values listed in their definitions,
@@ -2772,9 +2772,9 @@ div {
      <th>Animatable:
 
      <td>See <a
-      href="http://dev.w3.org/csswg/css-shapes/#shape-outside-property">‘<code
-      class=property>shape-outside</code>’</a> <a href="#CSS3-EXCLUSIONS"
-      rel=biblioentry>[CSS3-EXCLUSIONS]<!--{{!CSS3-EXCLUSIONS}}--></a>
+      href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property">‘<code
+      class=property>shape-outside</code>’</a> <a href="#CSS-SHAPES"
+      rel=biblioentry>[CSS-SHAPES]<!--{{!CSS-SHAPES}}--></a>
   </table>
 
   <p>Specifies a basic shape or references a <a href="#ClipPathElement"><code
@@ -2790,14 +2790,14 @@ div {
    <dt> <dfn id=ltbasic-shapegt>&lt;basic-shape&gt;</dfn>
 
    <dd> A <a
-    href="http://www.w3.org/TR/2012/WD-css3-exclusions-20120503/#supported-svg-shapes">basic
-    shape function</a> as defined in CSS3 Exclusions. The origin of clipping
-    shapes is on the top left of the <a class=index
+    href="http://www.w3.org/TR/css-shapes-1/#basic-shapes-from-svg-syntax">basic
+    shape function</a> as defined in the CSS Shapes module. The origin of
+    clipping shapes is on the top left of the <a class=index
     href="#bounding-client-rect" id=bounding-client-rect0>bounding client
     rect</a>. Percentage values are resolved against the <a class=index
     href="#bounding-client-rect" id=bounding-client-rect1>bounding client
-    rect</a> width and height. (See <a href="#CSS3-EXCLUSIONS"
-    rel=biblioentry>[CSS3-EXCLUSIONS]<!--{{!CSS3-EXCLUSIONS}}--></a>.)
+    rect</a> width and height. (See <a href="#CSS-SHAPES"
+    rel=biblioentry>[CSS-SHAPES]<!--{{!CSS-SHAPES}}--></a>.)
 
    <dt>‘<code class=css>child</code>’
 
@@ -3878,6 +3878,16 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    </dd>
    <!---->
 
+   <dt id=CSS-SHAPES>[CSS-SHAPES]
+
+   <dd>Vincent Hardy; Rossen Atanassov; Alan Stearns. <a
+    href="http://www.w3.org/TR/2013/WD-css-shapes-1-20130620/"><cite>CSS
+    Shapes Module Level 1.</cite></a> 20 June 2013. W3C Working Draft. URL:
+    <a
+    href="http://www.w3.org/TR/2013/WD-css-shapes-1-20130620/">http://www.w3.org/TR/2013/WD-css-shapes-1-20130620/</a>
+   </dd>
+   <!---->
+
    <dt id=CSS21>[CSS21]
 
    <dd>Bert Bos; et al. <a
@@ -3885,16 +3895,6 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
     Sheets Level 2 Revision 1 (CSS 2.1) Specification.</cite></a> 7 June
     2011. W3C Recommendation. URL: <a
     href="http://www.w3.org/TR/2011/REC-CSS2-20110607">http://www.w3.org/TR/2011/REC-CSS2-20110607</a>
-   </dd>
-   <!---->
-
-   <dt id=CSS3-EXCLUSIONS>[CSS3-EXCLUSIONS]
-
-   <dd>Vincent Hardy; Rossen Atanassov; Alan Stearns. <a
-    href="http://www.w3.org/TR/2012/WD-css3-exclusions-20120503/"><cite>CSS
-    Exclusions and Shapes Module Level 3.</cite></a> 3 May 2012. W3C Working
-    Draft. (Work in progress.) URL: <a
-    href="http://www.w3.org/TR/2012/WD-css3-exclusions-20120503/">http://www.w3.org/TR/2012/WD-css3-exclusions-20120503/</a>
    </dd>
    <!---->
 
