@@ -1,7 +1,7 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
-2013-07-12  Dirk Schulze  <dschulze@adobe.com>
+2013-06-12  Dirk Schulze  <dschulze@adobe.com>
 - Removed support for 'enable-background' and require 'isolation' instead.
 
 2013-06-08  Dirk Schulze  <dschulze@adobe.com>
