@@ -1,3 +1,6 @@
+2013-06-20  Dirk Schulze  <dschulze@adobe.com>
+	Reference CSS Shapes module instead of CSS Exclusions.
+
 2013-05-30  Dirk Schulze  <dschulze@adobe.com>
 	Remove issue about 'mask: none' as suggested on www-style.
 
